# rctr-control

./: README.md  main.c  mission_control_node.py  perception_node.py
rctr_robot/: package.xml  setup.py
rctr_robot/config/: rctr_params.yaml
rctr_robot/launch/: follower.launch.py  operator.launch.py  rctr_launch.py
rctr_robot/rctr_robot/: challenge_manager.py  control_node.py  hardware_interface.py  operator_control.py  operator_display.py  perception_node.py  robot_camera_streamer.py  robot_hardware_interface.py  robot_perception.py
stm32_firmware/: main.cpp
