<?xml version="1.0"?>
<package format="3">
  <name>rctr_robot</name>
  <version>0.2.0</version>
  <description>RCTR Robot Teleoperation &amp; Perception Package</description>

  <maintainer email="team11@example.com">Team 11</maintainer>
  <license>MIT</license>

  <!-- ---------- build ---------- -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ---------- run‑time (ROS 2) ---------- -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- ---------- run‑time (Python / CV / ML) ---------- -->
  <exec_depend>opencv-python</exec_depend>          <!-- or opencv-python-headless -->
  <exec_depend>ultralytics</exec_depend>           <!-- YOLO v8 -->
  <!-- torch / torchvision are installed by pip wheels; not declared here -->

  <!-- ---------- tests ---------- -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
